Major refactoring, simplify java code